Data/Styles/style.css
body {
    margin: 0;
    padding: 0;
    background-color: #242336;
    font-family: "SF Pro Display";
}

* {
    text-decoration: none;
}

.navbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 32px;
    background-color: rgba(255,255,255,0.3);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
    backdrop-filter: blur(10px);
}

.navcontent {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 16px;
    gap: 8px;
}

.navcontent h4 {
    color: white;
}

.main-content {
    position: relative;
    z-index: 1;
    padding: 7%;
    display: flex;
    flex-direction: column;
}

.button {
    height: 32px;
    background-color: #0077FF;
    border-radius: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    text-justify: center;
    line-height: 0px;
    color: white;
    padding: 0 16px;
    border: none;
    cursor: pointer;
    font-weight: bold;
}

.button:hover {
    filter: opacity(0.8);
}

.navexit {
    position: absolute;
    right: 16px;
    top: 8px;
    width: 16px;
    height: 16px;
    background-size: cover;
    background-position: center;
    cursor: pointer;
}

.navback {
    position: absolute;
    left: 16px;
    top: 8px;
    width: 16px;
    height: 16px;
    background-size: cover;
    background-position: center;
    cursor: pointer;
}

.navicon {
    width: 24px;
    height: 24px;
    background-size: cover;
    background-position: center;
    border-radius: 6px;
}

.navitem {
    color: gray;
}

.content {
    margin: 0 auto;
    max-width: 1000px;
    color: white;
}

.code-area {
    display: flex;
    align-items: center;
    background-color: rgba(0,0,0,0.7);
    border-radius: 8px;
    padding: 4px;
    height: 32px;
    font-family: "SF Mono";
    color: #ffffff;
    overflow-x: auto;
}

.code-area code {
    margin: 0;
    padding: 0 8px;
    font-size: 12px;
    line-height: 0;
    font-weight: bold;
}

.copy-btn {
    color: white;
    background-size: 16px 16px;
    margin: 8px;
    width: 16px;
    height: 16px;
    border: none;
    cursor: pointer;
    z-index: 2;
}

#copied {
    max-width: 400px;
    width: 90vw;
    height: 36px;
    background-color: lightgreen;
    margin: 0 auto;
    position: fixed;
    bottom: 16px;
    z-index: 1000;
    justify-self: center;
    border-radius: 8px;
    display: flex;
    color: white;
    align-items: center;
    justify-content: center;
    animation: copied-animation 2s ease-in-out;
}

@keyframes copied-animation {
    0% {
        transform: translateY(110%);
    }
    15% {
        transform: translateY(0);
    }
    85% {
        transform: translateY(0);
        opacity: 1;
    }
    100% {
        transform: translateY(110%);
        display: none;
        opacity: 0;
    }
}

#copied div {
    background-image: url("/Data/Icons/action.checkmark.svg");
    width:  24px;
    height: 24px;
    background-size: cover;
    background-position: center;
    margin-right: 4px;
}

